# stch-botorch-public

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple_mobo.py  standalone_optimization.py  vqe_multi_objective.py
src/stch_botorch/: __init__.py  scalarization_botorch.py  stch_standalone.py  weight_selection.py
src/stch_botorch/acquisition/: __init__.py  parego_stch.py
