[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stch-botorch"
version = "0.1.0"
description = "Smooth Tchebycheff scalarization for multi-objective Bayesian optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ilkham Yabbarov", email = "ilkhamfy@gmail.com"},
]
dependencies = [
    "botorch>=0.9",
    "torch>=2.0",
    "gpytorch>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]
